<resources>
    <string name="app_name" translatable="false">FytFunctionalityExtender</string>
    <string name="app_settings">Application preferences</string>
    <string name="misc_settings">Miscellaneous ON/OFF Settings</string>
    <string name="use_root_access_title">Use root access for the system call</string>
    <string name="use_root_access_sum_on">ON: the system call is executed as root</string>
    <string name="use_root_access_sum_off">OFF: the system call is executed as normal user</string>

    <string name="acc_on_off_settings">Define apps or actions when the contact/unit is switched ON or OFF; or when coming out of resume.</string>
    <string name="acc_on_settings">What to do when contact is switched on (ACC_ON)</string>
    <string name="switch_on_wifi_during_accon">ON: The WiFi is switched on when the contact is switched on (to overcome PX5 bug)</string>
    <string name="dont_touch_wifi_during_accon">OFF: Do not touch the WiFi state when contact is switched on</string>
    <string name="switch_on_wifi">Option to switch on WiFi during acc_on.</string>
    <string name="restart_player_during_accon">ON: Restart active media player when contact is switched on</string>
    <string name="dont_restart_player_during_accon">OFF: Do not restart active media player when contact is switched on</string>
    <string name="restart_player">Option to restart the active media player during acc_on.</string>
    <string name="accon_packagename">Start apk by package name.</string>
    <string name="accon_packagename_summary">Separate multiple package names with a semicolon (;)</string>
    <string name="accon_intent">Start apk by intent.</string>
    <string name="accon_intent_summary">Separate multiple intents with a semicolon (;)</string>
    <string name="accon_syscall">Execute system call(s) to execute linux command/script.</string>
    <string name="accon_syscall_summary">Separate multiple calls with a semicolon (;)</string>

    <string name="acc_off_settings">What to do when contact is switched off (ACC_OFF)</string>
    <string name="acc_off_call_title">ACC_OFF: Call method</string>
    <string name="acc_off_text_title">ACC_OFF: String to be used</string>
    <string name="switch_off_wifi_during_accoff">ON: Switch off WiFi when contact is switched off</string>
    <string name="dont_touch_wifi_during_accoff">OFF: Do not touch the WiFi state when contact is switched off</string>
    <string name="switch_off_wifi">Option to switch off WiFi during acc_off.</string>
    <string name="pause_player_during_accoff">ON: Pause active media player when contact is switched off</string>
    <string name="dont_pause_player_during_accoff">OFF: Do not pause active media player when contact is switched off</string>
    <string name="pause_player">Option to pause the active media player during acc_off.</string>
    <string name="accoff_syscall">Execute system call(s) to execute linux command/script.</string>
    <string name="accoff_syscall_summary">Separate multiple commands with a semicolon (;)</string>

    <string name="about_info_screen">Information Screen</string>
    <string name="donation">Donation</string>
    <string name="paypal_donation_title">Donate via PayPal</string>
    <string name="paypal_donation_summary">Not necessary as I will survive without it, but you could buy me a glass of wine</string>
    <string name="paypal_url"  translatable="false">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=HK2KGH6QVA992</string>
    <string name="about">About</string>
    <string name="xda_discussion_title">XDA Discussion thread</string>
    <string name="xda_discussion_summary">Discuss or ask questions about this little app on XDA</string>
    <string name="github_title">Source code</string>
    <string name="github_summary">Explore the source code of FFE(=FytFunctionalityExtender) on Github</string>

    <string name="zygote_reboot_title">This change requires a soft reboot</string>
    <string name="zygote_reboot_message">This change requires a soft reboot. Do you want to do that now?</string>
    <string name="zygote_reboot_soft_reboot">Soft Reboot</string>
    <string name="zygote_reboot_cancel">Cancel</string>

    <!-- for the "list installed apps" option -->
    <string name="listapps_title">List all installed apps</string>
    <string name="listapps_summary">Retrieves information on the application packages that are currently installed on the head unit.</string>
    <string name="listapps_appname">App Name: </string> <!-- add a space behind -->
    <string name="listapps_pkgname">Package Name: </string> <!-- add a space behind -->

    <string name="dummyactivity_title">Just a string to give the dummy activity a name</string>
</resources>
