<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <PreferenceScreen
        android:title="@string/misc_settings"
        android:key="misc_settings"> -->
<!--        <PreferenceCategory>
            android:title="@string/misc_settings"
            android:key="misc_settings">
            <SwitchPreference
                android:defaultValue="true"
                android:key="use_root_access"
                android:summaryOn="@string/use_root_access_sum_on"
                android:summaryOff="@string/use_root_access_sum_off"
                android:title="@string/use_root_access_title" />
        </PreferenceCategory> -->
<!--    </PreferenceScreen> -->
<!--    <Preference
        android:key="listapps"
        android:title="@string/listapps_title"
        android:summary="@string/listapps_summary">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="org.hvdw.fytfunctionalityextender"
            android:targetClass="org.hvdw.fytfunctionalityextender.ListInstalledApps" />
    </Preference> -->

    <PreferenceScreen
            android:title="@string/acc_on_settings"
            android:key="acc_on_settings">
            <SwitchPreference
                android:defaultValue="true"
                android:key="switch_wifi_on"
                android:summaryOn="@string/switch_on_wifi_during_accon"
                android:summaryOff="@string/dont_touch_wifi_during_accon"
                android:title="@string/switch_on_wifi" />
            <SwitchPreference
                android:defaultValue="false"
                android:key="restart_player"
                android:summaryOn="@string/restart_player_during_accon"
                android:summaryOff="@string/dont_restart_player_during_accon"
                android:title="@string/restart_player" />
            <EditTextPreference
                android:key="accon_packagename_entry"
                android:title="@string/accon_packagename"
                android:summary="@string/accon_packagename_summary"
                android:defaultValue="" />
            <EditTextPreference
                android:key="accon_intent_entry"
                android:title="@string/accon_intent"
                android:summary="@string/accon_intent_summary"
                android:defaultValue="" />
            <EditTextPreference
                android:key="accon_intent_syscall"
                android:title="@string/accon_syscall"
                android:summary="@string/accon_syscall_summary"
                android:defaultValue="" />
    </PreferenceScreen>
    <PreferenceScreen
            android:title="@string/acc_off_settings"
            android:key="acc_off_settings">
        <SwitchPreference
            android:defaultValue="true"
            android:key="switch_wifi_off"
            android:summaryOn="@string/switch_off_wifi_during_accoff"
            android:summaryOff="@string/dont_touch_wifi_during_accoff"
            android:title="@string/switch_off_wifi" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="pause_player"
            android:summaryOn="@string/pause_player_during_accoff"
            android:summaryOff="@string/dont_pause_player_during_accoff"
            android:title="@string/pause_player" />
        /* We will not start apks by packagename or intent when the unit switches off. We might need an extra system call though */
        <EditTextPreference
            android:key="accoff_intent_syscall"
            android:title="@string/accoff_syscall"
            android:summary="@string/accoff_syscall_summary"
            android:defaultValue="" />
    </PreferenceScreen>


    <PreferenceScreen
        android:title="@string/about_info_screen"
        android:key="about_info">
        <PreferenceCategory
            android:key="ABOUT"
            android:title="@string/about">
            <Preference
                android:key="xda_discussion"
                android:title="@string/xda_discussion_title"
                android:summary="@string/xda_discussion_summary">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://forum.xda-developers.com/android-auto/android-head-units/joying-extra-tools-apk-apk-to-help-t3628200" />
            </Preference>
            <Preference
                android:key="github"
                android:title="@string/github_title"
                android:summary="@string/github_summary">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/hvdwolf/FytFunctionalityExtender" />
            </Preference>
        </PreferenceCategory>
    </PreferenceScreen>

</PreferenceScreen>
